[workspace]
members = ["dars", "dap2", "dars-catalog"]
resolver = "2"

[profile.release]
#lto = "fat"
#codegen-units = 1

[workspace.dependencies]
hdf5 = { package = "hdf5-metno", version = "0.9" }
hdf5-sys = { package = "hdf5-metno-sys", version = "0.9" }
hidefix = "0.11"
# hidefix = { path = "../hidefix" }
