[package]
authors = ["Gaute Hope <eg@gaute.vetsj.com>"]
description = "OPeNDAP DAP/2 server-side protocol implementation"
edition = "2018"
license = "MIT"
name = "dap2"
repository = "https://github.com/gauteh/dars"
version = "0.2.0"

[dependencies]
anyhow = "1"
async-stream = "0.3"
async-trait = "0.1"
bytes = "0.5"
futures = "0.3"
itertools = "0.9"
log = "0.4"
percent-encoding = "2.1"
