[package]
authors = ["Gaute Hope <eg@gaute.vetsj.com>"]
description = "OPeNDAP DAP/2 server-side protocol implementation"
edition = "2018"
license = "MIT"
name = "dap2"
repository = "https://github.com/gauteh/dars"
version = "0.2.0"

[dependencies]
anyhow = "1.0.35"
async-stream = "0.3.0"
async-trait = "0.1.42"
bytemuck =  "1.5"
bytes = "1"
futures = "0.3.8"
itertools = "0.10.3"
log = "0.4.11"
percent-encoding = "2.1.0"
