[package]
authors = ["Gaute Hope <eg@gaute.vetsj.com>"]
edition = "2018"
name = "dars-catalog"
repository = "https://github.com/gauteh/dars"
license = "MIT"
description = "Catalog for dars-dap"
version = "0.1.0"

[dependencies]
warp = "0.2.5"
hyper = "0.13.9"
tera = "1.5.0"
anyhow = "1.0.34"
lazy_static = "1.4.0"
rust-embed = "5.6.0"

[dependencies.serde]
features = ["derive"]
version = "1.0.117"

[dev-dependencies]
futures = "0.3.8"

