[package]
authors = ["Gaute Hope <eg@gaute.vetsj.com>"]
edition = "2018"
name = "dars"
version = "0.1.0"
repository = "https://github.com/gauteh/dars"
license = "MIT"
description = "𓃢   A fast and light OPeNDAP server"

[[bin]]
name = "dars"
path = "src/main.rs"

[dependencies]
anyhow = "1"
async-stream = "0.3"
async-trait = "0.1"
bincode = "1"
bytes = "0.5"
colored = "2"
env_logger = "0.7"
futures = "0.3"
getopts = "0.2"
hyper = "0.13"
itertools = "0.9"
jemallocator = "0.3"
lazy_static = "1"
libc = "0.2"
log = "0.4"
ndarray = "0.13"
num_cpus = "1"
roxmltree = "0.13"
sled = "0.34"
tokio-util = "0.3"
toml = "0.5"
walkdir = "2"
warp = "0.2"

[dependencies.dap2]
path = "../dap2"
version = "0.2"

[dependencies.dars-catalog]
path = "../dars-catalog"
version = "0.1"
optional = true

[dependencies.hdf5]
version = "0.7"

[dependencies.hdf5-sys]
features = ["static", "zlib"]
version = "0.7"

[dependencies.hidefix]
features = ["static"]
version = "0.2"

[dependencies.serde]
features = ["derive"]
version = "1"

[dependencies.tokio]
features = ["full"]
version = "0.2"

[lib]
name = "dars"
path = "src/lib.rs"

[features]
default = ["catalog", "fast-index"]
catalog = ["dars-catalog"]
fast-index = ["hidefix/fast-index"]

