[package]
authors = ["Gaute Hope <eg@gaute.vetsj.com>"]
edition = "2018"
name = "dars"
version = "0.1.0"
repository = "https://github.com/gauteh/dars"
license = "MIT"
description = "𓃢   A fast and light OPeNDAP server"

[[bin]]
name = "dars"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.32"
async-stream = "0.3.0"
async-trait = "0.1.40"
bincode = "1.3.1"
bytes = "0.5.6"
colored = "2.0.0"
env_logger = "0.7.1"
futures = "0.3.5"
getopts = "0.2.21"
hyper = "0.13.7"
itertools = "0.9.0"
jemallocator = "0.3.2"
lazy_static = "1.4.0"
libc = "0.2.77"
log = "0.4.11"
ndarray = "0.13.1"
num_cpus = "1.13.0"
roxmltree = "0.13.0"
sled = "0.34.4"
tokio-util = "0.3.1"
toml = "0.5.6"
walkdir = "2.3.1"
warp = "0.2.5"
hdf5 = "0.7.0"

[dependencies.dap2]
path = "../dap2"
version = "0.2"

[dependencies.dars-catalog]
path = "../dars-catalog"
version = "0.1"
optional = true

[dependencies.hdf5-sys]
features = ["static", "zlib"]
version = "0.7.0"

[dependencies.hidefix]
features = ["static"]
version = "0.2.0"

[dependencies.serde]
features = ["derive"]
version = "1.0.115"

[dependencies.tokio]
features = ["full"]
version = "0.2.22"

[lib]
name = "dars"
path = "src/lib.rs"

[features]
default = ["catalog", "fast-index"]
catalog = ["dars-catalog"]
fast-index = ["hidefix/fast-index"]

