[package]
authors = ["Gaute Hope <eg@gaute.vetsj.com>"]
edition = "2018"
license = "LGPL"
name = "hdfidx"
version = "0.1.0"
[dependencies]
anyhow = "*"
byte-slice-cast = "*"
byteorder = "*"

[dependencies.hdf5]
path = "../../hdf5-rust"

[dependencies.hdf5-sys]
path = "../../hdf5-rust/hdf5-sys"
features = [ 'static' ]
